# MosaiPic

./: .gitignore  CMakeLists.txt  build.bat  build.sh  config.ini
src/: mosaipic.cpp
